# legato_graphics_web_demo

./: .gitignore  LICENSE  README.md
src/firmware/src/config/stub/: definitions.h  harmony-manifest-failure.yml  harmony-manifest-success.yml  initialization.c  interrupts.c  startup_xc32.c  stub.ld  tasks.c
src/firmware/src/config/stub/peripheral/clk/: plib_clk.c
src/firmware/src/config/stub/peripheral/pio/: plib_pio.c  plib_pio.h
src/firmware/src/config/stub/peripheral/tc/: plib_tc0.c
src/firmware/src/config/stub/peripheral/xdmac/: plib_xdmac.c
src/firmware/src/config/stub/stub.mhc/: GraphSettings.yml  HarmonyCore.yml  cmsis.yml  core.yml  dfp.yml  efc.yml  gfx_disp_generic.yml  gfx_hal_le.yml  gfx_legato.yml  le_gfx_driver_lcc.yml  project.yml  settings.yml  smc.yml  sys_input.yml  tc0.yml
src/firmware/stub_project.X/nbproject/: configurations.xml  project.xml
src/legato_display_sim/: CMakeLists.txt  definitions.h  main.c  sdl_input.c  sdl_input.h  sdl_renderer.c  sdl_renderer.h  toolchain_specifics.h  wrapper.html
src/legato_display_sim/gfx/: CMakeLists.txt
src/legato_display_sim/gfx/driver/controller/lcc/: drv_gfx_lcc.c
src/legato_display_sim/gfx/legato/: legato_config.h
src/legato_display_sim/gfx/legato/image/raw/: legato_imagedecoder_raw_blend.c  legato_imagedecoder_raw_mask.c  legato_imagedecoder_raw_palette_internal.c
src/legato_display_sim/gfx/legato/widget/image/: legato_widget_image.c
